# estimated_carbon_footprint

./: Cargo.toml  Data_CleanUp.ipynb  README.md  smartprix_final_manipulated.csv
src/: main.rs
static/: index.html  script.js  style.css
