[package]
name = "estimated_carbon_footprint"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
csv = "1.1"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
tower-http = { version = "0.4", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
